[project]
authors = [{name = "Geoff Hutchison", email = "geoff.hutchison@gmail.com"}]
dependencies = []
name = "avogadro-xtb-energy"
requires-python = ">= 3.11"
version = "0.2.0"

[project.scripts]
avogadro-xtb-energy = "avogadro_xtb_energy:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/avogadro_xtb_energy"]

[tool.avogadro]
minimum-avogadro-version = "1.103"

[[tool.avogadro.energy-models]]
identifier = "GFN1"
model-name = "GFN1"
description = "Calculate GFN1-xTB energies and gradients"
input-format = "cjson"
support.gradients = true
support.elements = "1-86"
support.unit-cell = false
support.ions = true
support.radicals = true

[[tool.avogadro.energy-models]]
identifier = "GFN2"
model-name = "GFN2"
description = "Calculate GFN2-xTB energies and gradients"
input-format = "cjson"
support.gradients = true
support.elements = "1-86"
support.unit-cell = false
support.ions = true
support.radicals = true

[[tool.avogadro.energy-models]]
identifier = "GFN-FF"
model-name = "GFN-FF"
description = "Calculate GFN-FF energies and gradients"
input-format = "cjson"
support.gradients = true
support.elements = "1-86"
support.unit-cell = false
support.ions = true
support.radicals = false

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
avogadro_xtb_energy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
xtb-python = ">=22.1,<23"
typing_extensions = ">=4.0"
